manifests/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
      color: blue
  template:
    metadata:
      labels:
        app: hello
        color: blue
    spec:
      containers:
        - name: hello
          image: ngbluegreen.azurecr.io/bluegreen
          ports:
            - containerPort: 8081
